Fix misaligned cancel button. Fixes #1

--- a/plugins/reAdjust/design/readjust.css
+++ b/plugins/reAdjust/design/readjust.css
@@ -42,6 +42,13 @@
 
 }
 
+/* Fix misaligned cancel button
+ ==============================================================================
+ */
+#DiscussionForm a.Cancel {
+    margin-top: 20px;
+}
+
 
 /* Fix max width on embedded videos
  ==============================================================================
